--- a/(public)/css/index.css
+++ b/(public)/css/index.css
@@ -32,7 +32,7 @@ aside.title-bar.contact-bar{background-image: url(../img/parallax3.jpg);}
 
 .header-wrapper.active {background-color: #fff; color: #111; box-shadow: 0 0 8px rgba(0, 0, 0, .5); transition: transform .5s; transition-timing-function: linear;}
 
-.monavi-wrapper {width: 100%; position: fixed; background-color: #fff; top: 48px; display: none;}
+.monavi-wrapper {width: 100%; position: fixed; z-index: 8; background-color: #fff; top: 48px; display: none; box-shadow: 0 0 8px rgba(0, 0, 0, .5);}
 .monavi-wrapper > .monavi {padding: 1em;}
 .monavi-wrapper > .monavi:hover {background-color: #eee;}
 
