--- a/(public)/css/index.css
+++ b/(public)/css/index.css
@@ -165,6 +165,9 @@ aside.title-bar.contact-bar {background-image: url(../img/parallax3.jpg);}
 	.client-bar > .client-wrap > .client {width: 100%; border-bottom: 1px solid #555;}
 	.contact-wrapper > .contact-outwrap > .loc-inwrap {width: 100%;}
 	.contact-wrapper > .contact-outwrap > .info-inwrap {width: 100%; padding-top: 3%; padding-left: 0;}
+	aside.title-bar {background-attachment: scroll;}
+	.main-wrapper {background-attachment: scroll;}
+}
 }
 
 
@@ -173,5 +176,6 @@ aside.title-bar.contact-bar {background-image: url(../img/parallax3.jpg);}
 	.pf-wrapper > .pf-wrap > .pf {width: 98%;}
 	.contact-wrapper > .contact-outwrap > .info-inwrap > .form-wrap > input[name='name'] {width: 100%;}
 	.contact-wrapper > .contact-outwrap > .info-inwrap > .form-wrap > input[name='email'] {width: 100%;}
-}
+
+
 
